fix vertical scrool on small screens

--- a/src/app/docs/components/docs-menu/docs-menu.module.scss
+++ b/src/app/docs/components/docs-menu/docs-menu.module.scss
@@ -43,7 +43,7 @@
   }
 
   @include media-mobile-landscape {
-    width: 100dvw;
+    width: 100%;
   }
 }
 
